# Nokia_TestTask

./: CMakeLists.txt  README.md  build.sh
doc/: test.txt
src/: main.cpp
src/CSV_Module/: csv_calculator.cpp  csv_calculator.h  csv_container.cpp  csv_container.h  csv_module.h  csv_printer.cpp  csv_printer.h
src/Utilities/: auxiliary_functionality.cpp  auxiliary_functionality.h
test/: CMakeLists.txt
test/resource/TestCalculation/: divisionByZero.csv  heavyCsv.csv  recursiveCalculation.csv  unknownCell.csv
test/resource/TestCellFormat/: cellPattern1.csv  cellPattern2.csv  cellPattern3.csv  cellPattern4.csv  columnAlreadyExists.csv  emptyCell.csv  formulaWithoutEquals.csv  nonEmptyFirstCell.csv  rowAlreadyExists.csv  strangeColumnHeaders.csv  strangeRowHeaders.csv
test/src/: main_test.cpp  test_cases.h  test_runner.h
